macOS: fix hide_decoration making window nonresizable
Use PyObjC to call `setWindowMask:` with resizable flag on the
underlying NSWindow.

Fixes #4067

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -39,6 +39,14 @@ ignore_missing_imports = True
 # https://github.com/pygments/pygments/issues/1189
 ignore_missing_imports = True
 
+[mypy-objc]
+# https://github.com/ronaldoussoren/pyobjc/issues/417
+ignore_missing_imports = True
+
+[mypy-AppKit]
+# https://github.com/ronaldoussoren/pyobjc/issues/417
+ignore_missing_imports = True
+
 [mypy-qutebrowser.browser.browsertab]
 disallow_untyped_defs = True
 
