Add option for completion uniform height
Fixes #2112 as well as rendering issues due to different languages/scripts
that require more vertical space, when enabled.

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1280,6 +1280,15 @@ completion.timestamp_format:
     for allowed substitutions, qutebrowser uses both sqlite and Python to
     format its timestamps.
 
+completion.uniform_height:
+  type: Bool
+  default: true
+  desc: >-
+    Use uniform height for completion rows.
+
+    Setting this to `false` may affect performance negatively, and has caused
+    crashes in Qt in the past.
+
 completion.web_history.exclude:
   type:
     name: List
