--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py38-pyqt515-cov,mypy,misc,vulture,flake8,pylint,pyroma,check-manifest,eslint,yamllint
+envlist = py38-pyqt515-cov,mypy,misc,vulture,flake8,pylint,pyroma,check-manifest,eslint,yamllint,actionlint
 distshare = {toxworkdir}
 skipsdist = true
 minversion = 3.15
@@ -192,6 +192,13 @@ basepython = {env:PYTHON:python3}
 deps = -r{toxinidir}/misc/requirements/requirements-yamllint.txt
 commands =
     {envpython} -m yamllint -f colored --strict . {posargs}
+
+[testenv:actionlint]
+basepython = python3
+deps =
+whitelist_externals = actionlint
+commands =
+    actionlint
 
 [testenv:mypy-diff]
 basepython = {env:PYTHON:python3}
