--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
 env:
   FORCE_COLOR: "1"
+  PY_COLORS: "1"
   MYPY_FORCE_TERMINAL_WIDTH: "180"
 
 jobs:
@@ -69,6 +70,7 @@ jobs:
                 bash download-actionlint.bash latest "$bindir"
                 echo "$bindir" >> "$GITHUB_PATH"
             fi
+            export TERM=ansi  # for colored pip output
             python -m pip install -U pip
             python -m pip install -U -r misc/requirements/requirements-tox.txt
       - name: "Run ${{ matrix.testenv }}"
@@ -177,6 +179,7 @@ jobs:
         if: "startsWith(matrix.os, 'ubuntu-')"
       - name: Install dependencies
         run: |
+            export TERM=ansi  # for colored pip output
             python -m pip install -U pip
             python -m pip install -U -r misc/requirements/requirements-tox.txt
       - name: "Run ${{ matrix.testenv }}"
