--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,16 +138,16 @@ jobs:
           - testenv: py311-pyqt515
             os: ubuntu-20.04
             python: "3.11-dev"
-          ### macOS: PyQt 5.15 (Python 3.9 to match PyInstaller env)
+          ### macOS Big Sur: PyQt 5.15 (Python 3.9 to match PyInstaller env)
           - testenv: py39-pyqt515
-            os: macos-10.15
+            os: macos-11
             python: "3.9"
             args: "tests/unit"  # Only run unit tests on macOS
-          ### macOS Big Sur
-          # - testenv: py39-pyqt515
-          #   os: macos-11.0
-          #   python: "3.9"
-          #   args: "tests/unit"  # Only run unit tests on macOS
+          ### macOS Monterey
+          - testenv: py39-pyqt515
+            os: macos-12
+            python: "3.9"
+            args: "tests/unit"  # Only run unit tests on macOS
           ### Windows: PyQt 5.15 (Python 3.9 to match PyInstaller env)
           - testenv: py39-pyqt515
             os: windows-2019
