--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,8 @@ jobs:
           - testenv: pylint
           - testenv: flake8
           # FIXME:qt6 (lint)
-          # - testenv: mypy
+          # - testenv: mypy-pyqt5
+          # - testenv: mypy-pyqt6
           - testenv: docs
           - testenv: vulture
           - testenv: misc
