--- a/misc/requirements/requirements-mypy.txt
+++ b/misc/requirements/requirements-mypy.txt
@@ -12,6 +12,8 @@ mypy-extensions==0.4.3
 pluggy==1.0.0
 Pygments==2.13.0
 PyQt5-stubs==5.15.6.0
+PyQt6==6.3.1
+PyQt6-WebEngine==6.3.1
 tomli==2.0.1
 types-PyYAML==6.0.11
 typing_extensions==4.3.0
