mypy: re-enable CI jobs for pyqt5
We'll be going forward with type checking on PyQt5 for now while
figuring out what to do with PyQt6 type checking.

See https://github.com/qutebrowser/qutebrowser/discussions/7372#discussioncomment-3502200

--- a/tox.ini
+++ b/tox.ini
@@ -180,12 +180,12 @@ deps =
 whitelist_externals = bash
 commands = bash scripts/dev/run_shellcheck.sh {posargs}
 
-[testenv:mypy-{qt5,qt6}]
+[testenv:mypy-{pyqt5,pyqt6}]
 basepython = {env:PYTHON:python3}
 passenv = TERM MYPY_FORCE_TERMINAL_WIDTH
 setenv =
-    qt6: CONSTANTS_ARGS=--always-true=USE_PYQT6 --always-false=USE_PYQT5 --always-false=USE_PYSIDE2 --always-false=USE_PYSIDE6 --always-false=IS_QT5 --always-true=IS_QT6
-    qt5: CONSTANTS_ARGS=--always-false=USE_PYQT6 --always-true=USE_PYQT5 --always-false=USE_PYSIDE2 --always-false=USE_PYSIDE6 --always-true=IS_QT5 --always-false=IS_QT6
+    pyqt6: CONSTANTS_ARGS=--always-true=USE_PYQT6 --always-false=USE_PYQT5 --always-false=USE_PYSIDE2 --always-false=USE_PYSIDE6 --always-false=IS_QT5 --always-true=IS_QT6
+    pyqt5: CONSTANTS_ARGS=--always-false=USE_PYQT6 --always-true=USE_PYQT5 --always-false=USE_PYSIDE2 --always-false=USE_PYSIDE6 --always-true=IS_QT5 --always-false=IS_QT6
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-dev.txt
@@ -207,13 +207,13 @@ whitelist_externals = actionlint
 commands =
     actionlint
 
-[testenv:mypy-{qt5,qt6}-diff]
+[testenv:mypy-{pyqt5,pyqt6}-diff]
 basepython = {env:PYTHON:python3}
-passenv = {[testenv:mypy-qt6]passenv}
-deps = {[testenv:mypy-qt6]deps}
+passenv = {[testenv:mypy-pyqt6]passenv}
+deps = {[testenv:mypy-pyqt6]deps}
 setenv =
-    qt6: CONSTANTS_ARGS=--always-true=USE_PYQT6 --always-false=USE_PYQT5 --always-false=USE_PYSIDE2 --always-false=USE_PYSIDE6 --always-false=IS_QT5 --always-true=IS_QT6
-    qt5: CONSTANTS_ARGS=--always-false=USE_PYQT6 --always-true=USE_PYQT5 --always-false=USE_PYSIDE2 --always-false=USE_PYSIDE6 --always-true=IS_QT5 --always-false=IS_QT6
+    pyqt6: CONSTANTS_ARGS=--always-true=USE_PYQT6 --always-false=USE_PYQT5 --always-false=USE_PYSIDE2 --always-false=USE_PYSIDE6 --always-false=IS_QT5 --always-true=IS_QT6
+    pyqt5: CONSTANTS_ARGS=--always-false=USE_PYQT6 --always-true=USE_PYQT5 --always-false=USE_PYSIDE2 --always-false=USE_PYSIDE6 --always-true=IS_QT5 --always-false=IS_QT6
 commands =
     {envpython} -m mypy --cobertura-xml-report {envtmpdir} {env:CONSTANTS_ARGS} qutebrowser tests {posargs}
     {envdir}/bin/diff-cover --fail-under=100 --compare-branch={env:DIFF_BRANCH:origin/{env:GITHUB_BASE_REF:master}} {envtmpdir}/cobertura.xml
