--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
           - testenv: pylint
           - testenv: flake8
           # FIXME:qt6 (lint)
-          # - testenv: mypy-pyqt5
           # - testenv: mypy-pyqt6
+          - testenv: mypy-pyqt5
           - testenv: docs
           - testenv: vulture
           - testenv: misc
