--- a/tox.ini
+++ b/tox.ini
@@ -191,6 +191,7 @@ deps =
     -r{toxinidir}/misc/requirements/requirements-dev.txt
     -r{toxinidir}/misc/requirements/requirements-tests.txt
     -r{toxinidir}/misc/requirements/requirements-mypy.txt
+    pyqt6: -r{toxinidir}/misc/requirements/requirements-pyqt-6.txt
 commands =
     {envpython} -m mypy {env:CONSTANTS_ARGS} qutebrowser {posargs}
 
