--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ importlib-resources==5.9.0 ; python_version=="3.7.*" or python_version=="3.8.*"
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 Pygments==2.13.0
-pyobjc-core==8.5 ; sys_platform=="darwin"
-pyobjc-framework-Cocoa==8.5 ; sys_platform=="darwin"
 PyYAML==6.0
 typing_extensions==4.3.0 ; python_version<"3.8"
 zipp==3.8.1
+# Unpinned due to recompile_requirements.py limitations
+pyobjc-core ; sys_platform=="darwin"
+pyobjc-framework-Cocoa ; sys_platform=="darwin"
