--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -2128,8 +2128,7 @@ statusbar.widgets:
          https://docs.python.org/3/library/datetime.html#strftime-and-strptime-format-codes[the
          Python datetime documentation]."
     none_ok: true
-  default: ['keypress', 'search_match', 'url', 'scroll', 'history', 'tabs',
-            'progress', 'progress_ascii']
+  default: ['keypress', 'search_match', 'url', 'scroll', 'history', 'tabs','progress']
   desc: "List of widgets displayed in the statusbar."
 
 ## tabs
