Adjust warnings and changelog URLs for new pytest

--- a/pytest.ini
+++ b/pytest.ini
@@ -91,4 +91,8 @@ filterwarnings =
     # https://github.com/HypothesisWorks/hypothesis/issues/3309
     ignore:module 'sre_constants' is deprecated:DeprecationWarning
     ignore:module 'sre_parse' is deprecated:DeprecationWarning
+    # https://github.com/pytest-dev/pytest-bdd/issues/568
+    ignore:The hookimpl pytest_.* uses old-style configuration options:pytest.PytestDeprecationWarning:pytest_bdd\.plugin
+    # https://github.com/pytest-dev/pytest-instafail/pull/26
+    ignore:The hookimpl pytest_.* uses old-style configuration options:pytest.PytestDeprecationWarning:pytest_instafail
 faulthandler_timeout = 90
