Skip problematic QtWebKit tests with OpenSSL 3
See https://github.com/cherrypy/cheroot/issues/517 and #7467

--- a/pytest.ini
+++ b/pytest.ini
@@ -37,6 +37,7 @@ markers =
     unicode_locale: Tests which need a unicode locale to work
     js_headers: Sets JS headers dynamically on QtWebEngine (unsupported on some versions)
     qtwebkit_pdf_imageformat_skip: Broken on QtWebKit with PDF image format plugin installed
+    qtwebkit_openssl3_skip: Broken due to cheroot bug with OpenSSL 3 on QtWebKit
     windows_skip: Tests which should be skipped on Windows
 qt_log_level_fail = WARNING
 qt_log_ignore =
