Adjust ignores/settings after mypy upgrade
See #7478, #7098

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -10,7 +10,6 @@ disallow_subclassing_any = True
 disallow_incomplete_defs = True
 check_untyped_defs = True
 disallow_untyped_decorators = True
-# no_implicit_optional = True
 warn_redundant_casts = True
 warn_unused_ignores = True
 # warn_return_any = True
@@ -26,6 +25,9 @@ enable_error_code = ignore-without-code
 show_error_codes = True
 show_error_context = True
 pretty = True
+
+### FIXME:qt6 get rid of this for v3
+no_implicit_optional = False
 
 [mypy-colorama]
 # https://github.com/tartley/colorama/issues/206
