Revert "ci: Drop QtWebKit"
This reverts commit 00ee3fad34cdabdab3e3b631191bafa0e5199e9f.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,11 +83,13 @@ jobs:
       fail-fast: false
       matrix:
         image:
+          - archlinux-webkit
           - archlinux-webengine
           # - archlinux-webengine-unstable
     container:
       image: "qutebrowser/ci:${{ matrix.image }}"
       env:
+        QUTE_BDD_WEBENGINE: "${{ matrix.image != 'archlinux-webkit' }}"
         DOCKER: "${{ matrix.image }}"
         CI: true
         PYTEST_ADDOPTS: "--color=yes"
