--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,11 +128,11 @@ jobs:
           ### PyQt 5.15 (Python 3.10)
           - testenv: py310-pyqt515
             os: ubuntu-20.04
-            python: 3.10-dev
+            python: "3.10"
           ### macOS: PyQt 5.15 (Python 3.9 to match PyInstaller env)
           - testenv: py39-pyqt515
             os: macos-10.15
-            python: 3.7
+            python: 3.9
             args: "tests/unit"  # Only run unit tests on macOS
           ### macOS Big Sur
           # - testenv: py39-pyqt515
