tox/ci: Add PyQt 6.4

--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,8 @@ minversion = 3.20
 setenv =
     PYTEST_QT_API=pyqt5
     QUTE_QT_WRAPPER=PyQt5
-    pyqt{62,63}: PYTEST_QT_API=pyqt6
-    pyqt{62,63}: QUTE_QT_WRAPPER=PyQt6
+    pyqt{62,63,64}: PYTEST_QT_API=pyqt6
+    pyqt{62,63,64}: QUTE_QT_WRAPPER=PyQt6
     cov: PYTEST_ADDOPTS=--cov --cov-report xml --cov-report=html --cov-report=
 passenv = PYTHON DISPLAY XAUTHORITY HOME USERNAME USER CI XDG_* QUTE_* DOCKER QT_QUICK_BACKEND FORCE_COLOR DBUS_SESSION_BUS_ADDRESS
 basepython =
@@ -33,8 +33,9 @@ deps =
     pyqt5152: -r{toxinidir}/misc/requirements/requirements-pyqt-5.15.2.txt
     pyqt62: -r{toxinidir}/misc/requirements/requirements-pyqt-6.2.txt
     pyqt63: -r{toxinidir}/misc/requirements/requirements-pyqt-6.3.txt
+    pyqt64: -r{toxinidir}/misc/requirements/requirements-pyqt-6.4.txt
 commands =
-    !pyqt-!pyqt515-!pyqt5152-!pyqt62-!pyqt63: {envpython} scripts/link_pyqt.py --tox {envdir}
+    !pyqt-!pyqt515-!pyqt5152-!pyqt62-!pyqt63-!pyqt64: {envpython} scripts/link_pyqt.py --tox {envdir}
     {envpython} -bb -m pytest {posargs:tests}
     cov: {envpython} scripts/dev/check_coverage.py {posargs}
 
