--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,6 +138,10 @@ jobs:
           - testenv: py39-pyqt63
             os: ubuntu-20.04
             python: 3.9
+          ### PyQt 6.4 (Python 3.9)
+          - testenv: py39-pyqt64
+            os: ubuntu-20.04
+            python: 3.9
           ### macOS Big Sur: PyQt 5.15 (Python 3.9 to match PyInstaller env)
           - testenv: py39-pyqt515
             os: macos-11
