--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -606,6 +606,7 @@ content.site_specific_quirks.skip:
       - js-whatsapp-web
       - js-discord
       - js-string-replaceall
+      - js-array-at
       - misc-krunker
       - misc-mathml-darkmode
     none_ok: true
