Update tox.ini syntax for tox 4 compat
See https://tox.wiki/en/4.0.3/faq.html#tox-4-changed-ini-rules

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,20 @@ setenv =
     PYTEST_QT_API=pyqt5
     pyqt{,512,513,514,515,5150}: LINK_PYQT_SKIP=true
     cov: PYTEST_ADDOPTS=--cov --cov-report xml --cov-report=html --cov-report=
-passenv = PYTHON DISPLAY XAUTHORITY HOME USERNAME USER CI XDG_* QUTE_* DOCKER QT_QUICK_BACKEND FORCE_COLOR DBUS_SESSION_BUS_ADDRESS
+passenv =
+    PYTHON
+    DISPLAY
+    XAUTHORITY
+    HOME
+    USERNAME
+    USER
+    CI
+    XDG_*
+    QUTE_*
+    DOCKER
+    QT_QUICK_BACKEND
+    FORCE_COLOR
+    DBUS_SESSION_BUS_ADDRESS
 basepython =
     py: {env:PYTHON:python3}
     py3: {env:PYTHON:python3}
@@ -178,7 +191,9 @@ commands = bash scripts/dev/run_shellcheck.sh {posargs}
 
 [testenv:mypy]
 basepython = {env:PYTHON:python3}
-passenv = TERM MYPY_FORCE_TERMINAL_WIDTH
+passenv =
+    TERM
+    MYPY_FORCE_TERMINAL_WIDTH
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-dev.txt
