--- a/tox.ini
+++ b/tox.ini
@@ -159,6 +159,7 @@ whitelist_externals = git
 passenv = CI GITHUB_REF
 deps =
     -r{toxinidir}/requirements.txt
+    -r{toxinidir}/misc/requirements/requirements-docs.txt
     -r{toxinidir}/misc/requirements/requirements-pyqt.txt
 commands =
     {envpython} scripts/dev/src2asciidoc.py {posargs}
