More adjustments for tox 4 subtleties

--- a/tox.ini
+++ b/tox.ini
@@ -155,8 +155,9 @@ commands =
 
 [testenv:docs]
 basepython = {env:PYTHON:python3}
-whitelist_externals = git
-passenv = CI GITHUB_REF
+passenv =
+    CI
+    GITHUB_REF
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-docs.txt
@@ -168,7 +169,10 @@ commands =
 
 [testenv:pyinstaller-{64,32}]
 basepython = {env:PYTHON:python3}
-passenv = APPDATA HOME PYINSTALLER_DEBUG
+passenv =
+    APPDATA
+    HOME
+    PYINSTALLER_DEBUG
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-pyinstaller.txt
@@ -180,14 +184,14 @@ commands =
 basepython = python3
 deps =
 passenv = TERM
-whitelist_externals = eslint
+allowlist_externals = eslint
 changedir = {toxinidir}/qutebrowser/javascript
 commands = eslint --report-unused-disable-directives .
 
 [testenv:shellcheck]
 basepython = python3
 deps =
-whitelist_externals = bash
+allowlist_externals = bash
 commands = bash scripts/dev/run_shellcheck.sh {posargs}
 
 [testenv:mypy]
@@ -212,7 +216,7 @@ commands =
 [testenv:actionlint]
 basepython = python3
 deps =
-whitelist_externals = actionlint
+allowlist_externals = actionlint
 commands =
     actionlint
 
