--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -75,25 +75,16 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: Get asciidoc
-        uses: actions/checkout@v3
-        with:
-          repository: asciidoc-py/asciidoc-py
-          ref: '9.x'
-          path: asciidoc
-          persist-credentials: false
-      - name: Move asciidoc out of the repo
-        run: mv asciidoc ..
       - name: Install dependencies
         run: |
             python -m pip install -U pip
-            python -m pip install -U -r misc/requirements/requirements-tox.txt
+            python -m pip install -U -r misc/requirements/requirements-tox.txt -r misc/requirements/requirements-docs.txt
       - name: Patch qutebrowser for debugging
         if: "contains(matrix.args, '--debug')"
         run: |
           sed -i '' '/.-d., .--debug.,/s/$/ default=True,/' qutebrowser/qutebrowser.py
       - name: Run tox
-        run: "tox -e ${{ matrix.toxenv }} -- --asciidoc ../asciidoc/asciidoc.py --gh-token ${{ secrets.GITHUB_TOKEN }} ${{ matrix.args }}"
+        run: "tox -e ${{ matrix.toxenv }} -- --gh-token ${{ secrets.GITHUB_TOKEN }} ${{ matrix.args }}"
       - name: Gather info
         id: info
         run: |
