--- a/tox.ini
+++ b/tox.ini
@@ -246,6 +246,7 @@ usedevelop = true
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-tox.txt
+    -r{toxinidir}/misc/requirements/requirements-docs.txt
     -r{toxinidir}/misc/requirements/requirements-pyqt.txt
     -r{toxinidir}/misc/requirements/requirements-dev.txt
     -r{toxinidir}/misc/requirements/requirements-pyinstaller.txt
