Fix gathering info for nightly builds on Windows
Not quite sure why this worked with 0ff0eaa703ad5e72d3c167f63ff8e498ad40ee9b honestly...

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -90,6 +90,7 @@ jobs:
         run: |
             echo "date=$(date +'%Y-%m-%d')" >> "$GITHUB_OUTPUT"
             echo "sha_short=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+        shell: bash
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
