--- a/tox.ini
+++ b/tox.ini
@@ -167,7 +167,7 @@ commands =
     {envpython} scripts/dev/check_doc_changes.py {posargs}
     {envpython} scripts/asciidoc2html.py {posargs}
 
-[testenv:pyinstaller-{64,32}]
+[testenv:pyinstaller-{64bit,32bit}]
 basepython = {env:PYTHON:python3}
 passenv =
     APPDATA
