Add pylint checker ensuring mocks have specs

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-tests.txt
     -r{toxinidir}/misc/requirements/requirements-docs.txt
+    -r{toxinidir}/misc/requirements/requirements-pylint.txt
     pyqt: -r{toxinidir}/misc/requirements/requirements-pyqt.txt
     pyqt515: -r{toxinidir}/misc/requirements/requirements-pyqt-5.15.txt
     pyqt5152: -r{toxinidir}/misc/requirements/requirements-pyqt-5.15.2.txt
