--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,6 +15,7 @@ jobs:
           - archlinux-webkit
           - archlinux-webengine
           - archlinux-webengine-unstable
+          - archlinux-webengine-qt6
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
