--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           # FIXME:qt6 remove again once merged
-          ref: ${{ matrix.image == "archlinux-webengine-qt6" && "qt6-v2" || "" }}
+          ref: ${{ matrix.image == 'archlinux-webengine-qt6' && 'qt6-v2' || '' }}
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
