tox: Install doc requirements for tests too
Needed so that tests generating :help docs run properly.

Follow-up to af176f749fd7f5521d3978e268a1fad169ac2bd4 and
bbdc83f638ed1a8e263a3efac0da8a901c1a1420

(cherry picked from commit 3d56f57e502ffaad40936f19f44083a2b63f0690)

--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,7 @@ basepython =
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-tests.txt
+    -r{toxinidir}/misc/requirements/requirements-docs.txt
     pyqt: -r{toxinidir}/misc/requirements/requirements-pyqt.txt
     pyqt515: -r{toxinidir}/misc/requirements/requirements-pyqt-5.15.txt
     pyqt5152: -r{toxinidir}/misc/requirements/requirements-pyqt-5.15.2.txt
