tox: Install doc requirements for tests too
Needed so that tests generating :help docs run properly.

Follow-up to af176f749fd7f5521d3978e268a1fad169ac2bd4 and
bbdc83f638ed1a8e263a3efac0da8a901c1a1420

--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,7 @@ basepython =
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-tests.txt
+    -r{toxinidir}/misc/requirements/requirements-docs.txt
     pyqt: -r{toxinidir}/misc/requirements/requirements-pyqt.txt
     pyqt512: -r{toxinidir}/misc/requirements/requirements-pyqt-5.12.txt
     pyqt513: -r{toxinidir}/misc/requirements/requirements-pyqt-5.13.txt
