tests: Ignore more Qt 6.5 / debug build messages
See #7624

--- a/pytest.ini
+++ b/pytest.ini
@@ -54,6 +54,9 @@ qt_log_ignore =
     # tests/unit/commands/test_userscripts.py::test_killed_command
     # on Windows
     ^QProcess: Destroyed while process .* is still running\.
+    # Qt 6.5 debug build
+    # FIXME:qt6 is this something we should/can fix properly?
+    ^QObject::connect: Connecting from COMPAT signal \(QSocketNotifier::activated\(int\)\)$
 xfail_strict = true
 filterwarnings =
     error
