tests: Update FIXME comment
PyQt insists using the deprecated signal overload, seemingly nothing we can do
to change that:
https://www.riverbankcomputing.com/pipermail/pyqt/2023-March/045215.html

See #7624

--- a/pytest.ini
+++ b/pytest.ini
@@ -55,7 +55,7 @@ qt_log_ignore =
     # on Windows
     ^QProcess: Destroyed while process .* is still running\.
     # Qt 6.5 debug build
-    # FIXME:qt6 is this something we should/can fix properly?
+    # WORKAROUND for https://www.riverbankcomputing.com/pipermail/pyqt/2023-March/045215.html
     ^QObject::connect: Connecting from COMPAT signal \(QSocketNotifier::activated\(int\)\)$
 xfail_strict = true
 filterwarnings =
