--- a/tox.ini
+++ b/tox.ini
@@ -53,6 +53,11 @@ commands =
     {envpython} -bb -m pytest {posargs:tests}
     cov: {envpython} scripts/dev/check_coverage.py {posargs}
 
+[testenv:py-qt6]
+setenv =
+    PYTEST_QT_API=pyqt6
+    QUTE_QT_WRAPPER=PyQt6
+
 [testenv:bleeding]
 basepython = {env:PYTHON:python3}
 setenv =
